v0.0.1 + automatic installation scripts
I'm generally satisfied with this version; it takes 3 seconds to start, there's no need to mess around or complicate anything, just install Java; tested on Ubuntu 24.04.4 LTS